# phPgAdmin

./: .env.example  .gitignore  CLAUDE.md  README.md  boost.json  composer.json  package.json  pint.json  vite.wasm.config.js
.github/workflows/: desktop-release.yml
app/Http/Controllers/: ServerController.php
app/Models/: Connection.php  Server.php  User.php
app/Providers/: AppServiceProvider.php
app/Services/: AppSetupService.php  PostgresCatalogService.php  PostgresConnectionService.php  PostgresTableAdminService.php  SqlSafetyChecker.php
app/Support/: CellValueFormatter.php  PostgresIdentifier.php
bootstrap/: app.php
config/: app.php  database.php  filesystems.php  livewire.php  setup.php
database/factories/: ConnectionFactory.php  ServerFactory.php
database/migrations/: 2026_04_16_141955_add_details_to_servers_and_connections_tables.php
dist-wasm/: index.html
public/lang/: en.json  pt_BR.json
resources/css/: app.css  nb-animations.css
resources/js/: app.js  index.html  nativeblade.js  php-loader.js  theme.js  workspace-editors.js
routes/: web.php
scripts/: git-cleanup-large-blobs.sh
scripts/ci/: collect-desktop-artifacts.mjs  prepare-release-build.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tray.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/Feature/: ExampleTest.php  ServerPersistenceTest.php  SetupTest.php  WebRoutesTest.php
tests/Unit/: CellValueFormatterTest.php  PostgresCatalogColumnTypeTest.php  SqlSafetyCheckerTest.php
(+20 files in other folders)
