[package]
name = "laravel"
version = "0.1.0"
edition = "2021"
description = "Laravel"

[lib]
name = "laravel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "laravel"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nativeblade-tauri = { path = "/Users/nasiroli/Projects/Nasiroli/phppgadmin/vendor/nativeblade/nativeblade/rust" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-geolocation = "2"
tauri-plugin-haptics = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-upload = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
tauri-plugin-barcode-scanner = "2"
tauri-plugin-nfc = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
